--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
+*.gmo
+*.mo
 *.pyc
+
+/autom4te.cache
+/aclocal.m4
+/ChangeLog
+/config.*
+/configure
+/install-sh
+/intltool-*
+/Makefile
+/Makefile.in
+/NEWS
+/missing
+/py-compile
+po/Makefile.in.in
+po/Makefile.in
+po/Makefile
+po/POTFILES
+po/stamp-it
