--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,7 @@
 AC_INIT(reinteract, 0.0.1)
 
+AC_CONFIG_AUX_DIR(config)
+
 AM_INIT_AUTOMAKE([dist-bzip2 dist-zip])
 AM_MAINTAINER_MODE
 AM_PATH_PYTHON(2.4)
