--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,7 +1,9 @@
-
 icondir = $(datadir)/icons/hicolor/scalable/apps
 icon_DATA = reinteract.svg
 
 desktopdir = $(datadir)/applications
 desktop_DATA = reinteract.desktop
 
+EXTRA_DIST=					\
+	$(desktop_DATA)				\
+	$(icon_DATA)
