Add simple editing of "Libraries" (python files) EditorWindow: Renamed from WorksheetWindow LibraryEditor: New Editor subclass for libraries BaseNotebookWindow: Add a common subclass for NotebookWindow and MiniWindow,   cut down on duplicated code BaseNotebookWindow EditorWindow: Create library editors when appropriate Editor NotebookEditor: Move the "save as" and "rename" to the base class save_file.py: Move some of the save-file (was save-worksheet) functionality here.

--- a/dialogs/Makefile.am
+++ b/dialogs/Makefile.am
@@ -2,7 +2,7 @@ DIALOGS =					\
 	open-notebook.xml			\
 	new-notebook.xml			\
 	notebook-properties.xml			\
-	save-worksheet.xml
+	save-file.xml
 
 dialogsdir=$(pkgdatadir)/dialogs
 dialogs_DATA=$(DIALOGS)
