Don't run the entire reinteract program as an import. Doing everything within an import statement means that the import lock is held and other threads can't import modules. Switch from 'import reinteract.main' to 'reinteract.main.main()'.

--- a/bin/reinteract.in
+++ b/bin/reinteract.in
@@ -16,3 +16,4 @@ global_settings.examples_dir = os.path.join(docdir, "examples")
 
 if __name__ == "__main__":
     import reinteract.main
+    reinteract.main.main()
