Execute worksheet code asynchronously in a thread ThreadExecutor: New class for executing a series of statements in a thread Statement:  - Move to an an explicit 'state' instance variable  - Add compile() and mark_for_execute() methods  - Get rid of ExecutionError, move catching exceptions inline  - Add before_execute/after_execute methods to allow KeyboardInterrupt    exceptions to cleanly interrupt execution. StatementChunk: Adapt to Statement changesx Worksheet: Use a ThreadExecutor ShellBuffer: Fix test cases

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,6 +45,7 @@ reinteractpkg_PYTHON =                                                        \
                     lib/reinteract/statement.py                               \
                     lib/reinteract/stdout_capture.py                          \
                     lib/reinteract/test_utils.py                              \
+                    lib/reinteract/thread_executor.py                         \
                     lib/reinteract/tokenized_statement.py                     \
                     lib/reinteract/undo_stack.py                              \
                     lib/reinteract/window_builder.py                          \
