Native wrapper for OS X
src/reinteract_wrapper_osx: Wrapper program to set paths
  and load menu
configure.ac: Add checks for building wrapper
acinclude.m4: JD_CHECK_PYTHON_HEADERS from pygobject

Makefile.am: Build a skeleton bundle for uninstalled operatin
data/Info.plist: property list file for bundle
data/MainMenu.nib: Interface Builder file with the menu. NIB
  format used to allow building on 10.4. If we don't care, switching
  to XIB format and using ibtool to convert would be more version-control
  friendly.
Reinteract.icns: Icon in OS X format

global_settings.py: Add a main_menu_mode option
main_menu.py: Bridge window actions to the Cocoa menu
base_window.py: Pass key events to the main menu, track active window,
  hook undo/redo to the menu. (Only the Cocoa menu for now, the
  keybindings are non-menu elsewhere.)
application.py: When we have a main menu, dont' quit when the
  last window is closed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *.pyc
 *~
+.DS_Store
+.deps
+*.o
 
+/acinclude.mr
 /api-docs
 /autom4te.cache
 /aclocal.m4
@@ -11,4 +15,6 @@
 Makefile
 Makefile.in
 /NEWS
+/Reinteract.app
+/ReinteractWrapper
 /*.tar.bz2
