Add a Builder base class for MsiBuilder
Split generic code for building a tree of files from different
sources into a Builder base class that we can use from build_msi.py

--- a/Makefile.am
+++ b/Makefile.am
@@ -73,7 +73,8 @@ examples_DATA =					\
 
 TOOLS_EXTRA =					\
 	tools/common/__init__.py		\
-	tools/common/am_parser.py
+	tools/common/am_parser.py		\
+	tools/common/builder.py
 
 # Input files for the WiX-based Windows installer
 WIX_FILES =					\
