Byte-compile Python when building the OS X distribution
Move code to byte-compile from build_msi to Builder.compile_python()
build_bundle: Call Builder.compile_python()
common.utils: New module; move check_call wrapper here

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,8 @@ examples_DATA =					\
 TOOLS_EXTRA =					\
 	tools/common/__init__.py		\
 	tools/common/am_parser.py		\
-	tools/common/builder.py
+	tools/common/builder.py			\
+	tools/common/utils.py
 
 # Input files for the WiX-based Windows installer
 WIX_FILES =					\
