Add configure --enable-python-thunks
The run-time location of Python from ThunkPython.[ch] is no
longer the default; you have to pass --enable-python-thunks
to configure to get this behavior. If you don't pass the option
then ReinteractWrapper is linked directly to Python.

configure.ac: Add --enable-python-thunks. Add code for figuring
  out how to link to Python using distutils.sysconfig
src/reinteract_wrapper_osx/*: Include config.h in all files;
  conditionalize appropriately in ThunkPython.h
Makefile.am: Only include ThunkPython.c when using thunks
tools/build_bundle/README: Mention --enable-python-thunks

--- a/Makefile.am
+++ b/Makefile.am
@@ -145,12 +145,16 @@ ReinteractWrapper_SOURCES  =					\
 	     src/reinteract_wrapper_osx/MenuController.m	\
 	     src/reinteract_wrapper_osx/MenuController.h	\
 	     src/reinteract_wrapper_osx/pyNativeMainMenu.m	\
-	     src/reinteract_wrapper_osx/pyNativeMainMenu.h	\
+	     src/reinteract_wrapper_osx/pyNativeMainMenu.h
+
+if USE_PYTHON_THUNKS
+ReinteractWrapper_SOURCES  +=					\
 	     src/reinteract_wrapper_osx/ThunkPython.c		\
 	     src/reinteract_wrapper_osx/ThunkPython.h
+endif
 
 INCLUDES = $(PYTHON_INCLUDES) $(WRAPPER_CFLAGS)
-ReinteractWrapper_LDFLAGS = -framework Cocoa
+ReinteractWrapper_LDFLAGS = -framework Cocoa $(PYTHON_LIBS)
 
 EXTRA_DIST =					\
              ChangeLog				\
