Move examples from docdir to datadir
Putting examples in /usr/share/doc/reinteract interacts messily
with the standard Linux distribution practice of putting files
into /usr/share/doc/reinteract-<version>. (Having both is ugly,
having the examples in the versioned directory doesn't work since
it breaks tracking recently open notebooks across package upgrades.)

So put them in /usr/share/reinteract/examples instead: since they
appear in the UI, they aren't *quite* documentation anyways.

--- a/Makefile.am
+++ b/Makefile.am
@@ -61,7 +61,7 @@ replay_PYTHON = lib/replay.py
 replotdir = $(pythondir)
 replot_PYTHON = lib/replot.py
 
-examplesdir = $(docdir)/examples
+examplesdir = $(pkgdatadir)/examples
 examples_DATA =					\
              examples/basics.rws		\
              examples/imshow.rws		\
